# ChangeLog for dev-ruby/ruby-postgres
# Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby-postgres/ChangeLog,v 1.20 2008/05/19 19:54:29 dev-zero Exp $

  19 May 2008; Tiziano Müller <dev-zero@gentoo.org>
  ruby-postgres-0.7.1.ebuild, ruby-postgres-0.7.1.20051221-r1.ebuild,
  ruby-postgres-0.7.1.20060406.ebuild:
  Changed dependency for postgresql to virtual/postgresql-base

  12 May 2008; Markus Rothe <corsair@gentoo.org>
  ruby-postgres-0.7.1.20060406.ebuild:
  Stable on ppc64; bug #221309

  29 Feb 2008; Jeroen Roovers <jer@gentoo.org>
  ruby-postgres-0.7.1.20051221-r1.ebuild,
  ruby-postgres-0.7.1.20060406.ebuild:
  Marked ~hppa (bug #211756).

  09 Jan 2008; <nichoj@gentoo.org> ruby-postgres-0.7.1.ebuild:
  Dropped mips keywords because postgres is broken on mips, as advised by
  Redhatter. This also paves the way for the fix in bug #202688.

  13 Nov 2007; Raúl Porcel <armin76@gentoo.org>
  ruby-postgres-0.7.1.20060406.ebuild:
  Add ~alpha

*ruby-postgres-0.7.1.20060406 (13 Jul 2007)

  13 Jul 2007; Joshua Nichols <nichoj@gentoo.org>
  +ruby-postgres-0.7.1.20060406.ebuild:
  Version bump. See bug #177150.

  14 Mar 2007; Tom Gall <tgall@gentoo.org> 
  ruby-postgres-0.7.1.20051221-r1.ebuild:
  added ~ppc64

  09 Jan 2007; Diego Pettenò <flameeyes@gentoo.org>
  ruby-postgres-0.7.1.20051221-r1.ebuild:
  Fix installation with some of the recent changes to gems.eclass.

*ruby-postgres-0.7.1.20051221-r1 (01 Nov 2006)

  01 Nov 2006; Diego Pettenò <flameeyes@gentoo.org>
  ruby-postgres-0.7.1.ebuild, -ruby-postgres-0.7.1.20051221.ebuild,
  +ruby-postgres-0.7.1.20051221-r1.ebuild:
  Revbump the snapshot, and let it depend on rubygems 0.9.0-r1 so to fix bug
  #143974 for everyone. Also change dependency on libpq rather than full blown
  postgresql, thanks to Matt Michalowski in bug #153642.

*ruby-postgres-0.7.1.20051221 (07 Aug 2006)

  07 Aug 2006; Caleb Tennis <caleb@gentoo.org>