@@ -1,6 +1,14 @@
 # ChangeLog for dev-ruby/ruby-postgres
 # Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby-postgres/ChangeLog,v 1.20 2008/05/19 19:54:29 dev-zero Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby-postgres/ChangeLog,v 1.21 2008/06/26 06:38:02 robbat2 Exp $
+
+*ruby-postgres-0.7.9.20080128 (26 Jun 2008)
+
+  26 Jun 2008; Robin H. Johnson <robbat2@gentoo.org>
+  +ruby-postgres-0.7.9.20080128.ebuild:
+  Bump per bug #215510. The gem name has changed, but the postgres.so is
+  still the same name, and it is supposed to just work. ruby-pg to come
+  later.
 
   19 May 2008; Tiziano Müller <dev-zero@gentoo.org>
   ruby-postgres-0.7.1.ebuild, ruby-postgres-0.7.1.20051221-r1.ebuild,
